more improvements after testing
